[package]
name = "connection"
version = "0.2.4"
edition = "2021"
authors = ["Will Cygan <wcygan.io@gmail.com>"]
description = "A TCP connection that can read and write serializable data"
categories = ["asynchronous", "network-programming"]
keywords = ["io", "tcp", "serialization"]
license = "MIT"
exclude = ["/.github"]

[[test]]
name = "test"
path = "test/test.rs"

[dependencies]
bincode = "1.3.3"
bytes = "1.4.0"
serde = { version = "1.0.158", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["net", "io-util"] }

[dev-dependencies]
tokio = { version = "1.26.0", features = ["full"] }